# AdvancedTopicsInProgramming

./: .gitignore
Ex1/: CMakeLists.txt  GameBoard.cpp  GameBoard.h  GameBoardForPlayers.cpp  GameBoardForPlayers.h  GameInit.cpp  GameInit.h  GameMove.cpp  GameMove.h  GamePiece.cpp  GamePiece.h  GeneralDefinitions.h  InitFactory.cpp  InitFactory.h  Match.cpp  Match.h  MoveFactory.cpp  MoveFactory.h  Playable.h  PlayableFactory.cpp  PlayableFactory.h  Player.cpp  Player.h  main.cpp  makefile  readme.txt  submit alone confirmation.docx
Ex2/: AutoPlayerAlgorithm.cpp  AutoPlayerAlgorithm.h  BoardImpl.cpp  BoardImpl.h  BoardSpot.h  CMakeLists.txt  FightInfoImpl.h  FilePlayerAlgorithm.cpp  FilePlayerAlgorithm.h  Game.cpp  Game.h  Notes.txt  PieceCounter.cpp  PiecePositionImpl.h  PointImpl.h  RandomGenerator.h  TODO.txt  WinReason.h  main.cpp  makefile  readme.txt
Ex2/Ex2/Ex2/: Ex2.cpp  PieceCounter.cpp  PieceCounter.h  PointImpl.h
Ex3/: FilePlayerAlgorithm.cpp  main.cpp
Ex3/PlayerAlgorithm/: CMakeLists.txt  FightInfoImpl.h  JokerChangeImpl.h  Move.h  MoveImpl.h  PieceCounter.cpp  PieceCounter.h  PiecePosition.h  PlayerAlgorithm.h  RSPPlayer_204621304.h  library.h  makefile
Ex3/TournamentManager/: AlgorithmRegistration.h  CMakeLists.txt  Game.cpp  TournamentManager.cpp  TournamentManager.h  ex3  main.cpp  makefile
Ex3/dummyAlgorithm/: CMakeLists.txt  RSPPlayer_123456789.h  makefile
Ex3/whole_project/: Game.h  RSPPlayer_204621304.cpp  RSPPlayer_204621304.h  TournamentManager.cpp  makefile  students.txt
Ex3/whole_project_for_test/: AlgorithmRegistration.cpp  Board.h  Game.cpp  RSPPlayer_123456789.cpp  RSPPlayer_123456789.h  TournamentManager.h  ex3  main.cpp  makefile
Ex4/Ex4/Ex4/: CMakeLists.txt  GameBoard.h  MyMaincpp.cpp  ex4_header.h  main.cpp  makefile
